Fixed a little alignment issue I noticed on the search bar.

--- a/app/webroot/css/components/header.scss
+++ b/app/webroot/css/components/header.scss
@@ -249,8 +249,8 @@
 	            width: px(44px);
 	            height: px(44px);
 	            position: absolute;
-	            right: px(13px);
-	            top: px(3px);
+	            right: px(4px);
+	            top: px(4px);
 	            margin: 0;
 	            text-indent: -$hideDistance;
 				padding: 0; /* Icon only */
